// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chevron /> renders the component pointing 45 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

<svg
  class="c0"
  direction="45"
  height="24px"
  viewBox="0 0 416 416"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
    fill="black"
  />
</svg>
`;

exports[`<Chevron /> renders the component pointing 225 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
}

<svg
  class="c0"
  direction="225"
  height="24px"
  viewBox="0 0 416 416"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
    fill="black"
  />
</svg>
`;

exports[`<Chevron /> renders the component pointing down 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

<svg
  class="c0"
  direction="down"
  height="24px"
  viewBox="0 0 416 416"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
    fill="black"
  />
</svg>
`;

exports[`<Chevron /> renders the component pointing left 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<svg
  class="c0"
  direction="left"
  height="24px"
  viewBox="0 0 416 416"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
    fill="black"
  />
</svg>
`;

exports[`<Chevron /> renders the component pointing right 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<svg
  class="c0"
  direction="right"
  height="24px"
  viewBox="0 0 416 416"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
    fill="black"
  />
</svg>
`;

exports[`<Chevron /> renders the component pointing up 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<svg
  class="c0"
  direction="up"
  height="24px"
  viewBox="0 0 416 416"
  width="24px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
    fill="black"
  />
</svg>
`;
